fixed overflow on hosted by section on listing details page

--- a/react-app/src/components/listings/listingDetails.css
+++ b/react-app/src/components/listings/listingDetails.css
@@ -133,6 +133,10 @@
 #host {
     font-size: 20px;
     font-weight: 500;
+    word-wrap: break-all !important;
+    overflow-wrap: break-word !important;
+    hyphens: auto !important;
+    width: 99%;
 }
 
 #host-avatar {
@@ -273,6 +277,17 @@
     
     #review-word {
         display: none;
+    }
+
+    #host-avatar {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 720px) {
+    #host {
+        font-size: 15px;
+        width: 200px;
     }
 }
 
